Fix: player z-index

--- a/client/components/Player/Player.module.css
+++ b/client/components/Player/Player.module.css
@@ -1,4 +1,5 @@
 .player {
+  z-index: 100;
   height: 60px;
   width: 100%;
   position: fixed;
